[gd_scene load_steps=2 format=3 uid="uid://5mi8oenvbjka"]

[ext_resource type="Script" path="res://Menu/Scripts/MainMenu.gd" id="1_5rakn"]

[node name="MainMenu" type="MenuBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 423.0
offset_top = 229.0
offset_right = -423.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rakn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 306.0
offset_bottom = 191.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="AddressEntry" type="LineEdit" parent="MarginContainer"]
visible = false
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EchoNight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[connection signal="text_submitted" from="MarginContainer/AddressEntry" to="." method="_on_address_entry_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
